	- Fixed missing image release in fluid (STR #2840).
	- Fixed out-of-bounds memory access in fluid (STR #3263).
	- Fixed trailing white space in fluid .fl files (STR #3239).
	- Several box types were not drawn correctly when deactivated.
	  The background color for deactivated widgets is now correct:
	  fl_inactive(color()) (STR #2907).
	- Fixed Fl_Pixmap (background) drawing to respect the clip region
	  (STR #3206).
	- Reading of .pbm image files is fixed: 1 is now interpreted as
	  black, and images of width a multiple of 8 are correctly read.
	  Note: if you relied on the faulty behavior you may need to fix
	  your image files.
	- Restored window background drawing, particularly the 'plastic'
	  scheme's background (STR #3059). This was a regression since
	  FLTK 1.3.0.
	- Prevent sending (FL_SHORTCUT) events to inactive widgets (STR #3216).
	- Fixed button label clipping (STR #3237).
	- Fixed Fl_Menu_::item_pathname() handling of descending submenu
	  pointers (STR #3177).
	- Fl_Text_Display: style buffer colors are no longer manipulated by
	  fl_contrast() for normal text drawing (fltk.coredev thread started
	  04/08/15, Subject: "RFC: Fl_Text_Display style buffer color weirdness")
	- Fl_Tree::deactivate() now affects draw color of items (must have
	  ABI 1.3.3 or higher enabled). For icons to draw deactivated,
	  enable ABI 1.3.4. (test/tree has a 'deactivate tree' button)
	- Fl_Tree::find_item() did not find items if the pathname contained
	  identical strings (STR #3234).
	- Fixed possible bad border effect when a set of radio menu items
	  is located first in its menu (STR #3176): Fl_Menu_Item::set_only()
	  is deprecated and replaced by Fl_Menu_::set_only(Fl_Menu_item*).
	- Restore the correct state of mouse buttons and keyboard modifier keys
	  after closing a file or printer dialog (STR #3221).
	- Fix for deactivate colors issue with Fl_Text_Display/Editor (STR #3219).
	- Fixed issue with MSWindows platform where the program kept running